ui.frontend/src/main/webpack/etisalat/styles/custom-components/craousel_benefits.scss
.top-carousel {
  .swiper-wrapper {
    @include respond-to-max($phone) {
      margin-left: $margin-step-0;
    }
    .swiper-slide {
      @include respond-to-max($phone) {
        width: 100%;
        margin-bottom: calc(#{$margin-step-4} + 4px);
      }
    }
  }
  .swiper-container {
    max-width: 100%;
    padding: 0;
    @include respond-to-max($phone) {
      width: 93.5%;
      @include rtlBlock() {
        margin-left: $margin-step-2;
      }
    }
    @include respond-to-min-max($desktop-min, $tablet) {
      width: 94%;
      margin-left: calc(#{$margin-step-1} + 4px);
      @include rtlBlock() {
        margin-right: calc(#{$margin-step-1} - 2px);
      }
    }
    @include respond-to-min($desktop-wide) {
      @include rtlBlock() {
        margin-right: $margin-step-0;
      }
    }
    @include respond-to-min-max($desktop-wide - 1, $desktop) {
      width: toRem(952);
      margin-left: calc(#{$margin-step-2} - 2px);
      @include rtlBlock() {
        margin-right: calc(#{$margin-step-2} - 2px);
      }
    }
  }

  .controls {
    display: block;
  }

  .current-promotions-wrraper .controls {
      display: flex;
      justify-content: space-between;
      flex-direction: row-reverse;
      .next.next-with--topcarousel,
      .prev.prev-with--topcarousel {
        position: absolute;
        margin-top: toRem(-112);
      }

    .next-with--topcarousel {
      margin-top: -7.5em;
      left: auto;
      right: toRem(-32);

      @include respond-to-min-max($desktop-min, $tablet) {
        margin-top: -7.5em;
        right: 0;
      }

      @include respond-to-min-max($desktop-wide, $desktop) {
        margin-top: -9.5em;
      }

      @include respond-to-min($desktop-wide) {
        margin-top: -9.5em;
      }
    }

    .prev-with--topcarousel {
      margin-top: -7.5em;
      z-index: 10;
      left: -3.1%;
      @include respond-to-min-max($desktop-min, $tablet) {
        margin-top: -7.5em;
      }

      @include respond-to-min-max($desktop-wide, $desktop) {
        margin-top: -9.5em;
      }

      @include respond-to-min($desktop-wide) {
        margin-top: -9.5em;
      }
    }

    .angle-with--backgroud {
      background: $cream-brown;
      border-radius: 50px;
    }
  }

  .swiper-slide--tiles {
    .current-promotions-box {
      background: none;
      box-shadow: none;
      padding: $padding-step-0;
      @include respond-to-max($phone) {
        margin-left: $margin-step-0;
        padding-left: $padding-step-0;
      }
    }

    .title-wrap {
      color: $almost-black;
      @include font-family-Neotech;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      font-weight: 400;
      line-height: 1.3;
    }

    .description {
      color: $steel-grey;
      font-size: $font14;
      line-height: toRem(24);
      @include rtlBlock() {
        text-align: right;
      }
      @include respond-to-max($tablet) {
        width: 100% !important;
      }
      p {
        @include font-family-lato();
        .font--big {
          @include respond-to-max($desktop-min) {
            font-size: $font16;
          }
          @include rtlBlock() {
            font-weight: get-font-weight("light");
          }
        }
      }
      ul {
        list-style: inside;
      }
    }

    .learn-more-wrap {
      a {
        font-size: toRem(14);
      }
    }
  }

  .transparent-link {
    .learn-more-wrap {
      text-transform: uppercase;
      transition: all 0.3s ease-in-out;
      color: $almost-black;
      background-color: $white;
      text-align: center !important;
      padding: 0 0.5rem;
      border-radius: toRem(4);
      border-width: toRem(1);
      border-color: $darkest-night;
      outline: 0;
      font-size: $font14;
      line-height: 3rem;
      letter-spacing: 0.14285714em;
      display: inline-block;
      margin-bottom: 0;
      font-weight: 400;
      vertical-align: middle;
      cursor: pointer;
      background-image: none;
      border: toRem(1) solid $almost-black;
      white-space: nowrap;
      height: toRem(50);
      min-width: 180px;
      width: auto;
      a {
        color: $almost-black;
        font-size: toRem(14);

        &:hover {
          text-decoration: none;
          color: $main-green;
        }

        &:before {
          display: none;
        }
      }
    }
  }

  .center {
    text-align: center;
    .title-wrap,
    .description,
    .learn-more-wrap {
      text-align: center;
    }

    .icon-with-bg {
      margin: auto auto 2.2rem;
    }

    .title-wrap {
      height: auto;
      margin-bottom: 1.65rem;
      font-size: toRem(24) !important;
    }

    .description {
      margin-bottom: 1.3rem;
    }
  }

  .left {
    text-align: left;

    @include respond-to-max($tablet) {
      margin-left: 2.5rem;
    }

    .title-wrap,
    .description,
    .learn-more-wrap {
      text-align: left;
    }

    .icon-wrap {
      margin-bottom: toRem(24);
      margin-left: -0.5rem;
    }

    .title-wrap {
      margin-top: 0;
      margin-bottom: $margin-step-2;
      height: toRem(32);
      @include truncate(16rem);

      @include rtlBlock() {
        text-align: right;
      }

      @include respond-to-max($phone) {
        margin-bottom: $margin-step-0;
      }

      @include respond-to-min($desktop) {
        @include rtl(width, toRem(288), 100%);
        @include rtlBlock() {
          max-width: 90%;
        }
      }
    }

    .description {
      margin-bottom: 1rem;
      margin: 0;
      @include respond-to-max($tablet) {
        width: 16rem;
      }
    }
  }

  .right {
    text-align: right;

    .title-wrap,
    .description,
    .learn-more-wrap {
      text-align: right;
    }

    .icon-wrap {
      margin-bottom: 1rem;
    }

    .title-wrap {
      margin-bottom: 0.65rem;
      margin-top: 0;
      height: toRem(23);
    }

    .description {
      height: toRem(54);
      margin-bottom: 1rem;
      margin: 0;
    }

    .learn-more-wrap {
      margin-top: 2rem;
    }
  }

  .background-dark {
    background-color: $sand-white-50;
  }

  .scrollbar-hidden {
    visibility: hidden;
  }

  .learn-more-wrap:hover {
    border-color: #719e19;
  }
}

.slider-fnt_small .description {
  font-size: $font16;
}

