Bugfix/etsl-567 fixed alignment issues, bugfix/etsl-672 fixed slider alignment

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/craousel_benefits.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/craousel_benefits.scss
@@ -60,7 +60,7 @@
       right: toRem(-32);
 
       @include respond-to-min-max($desktop-min, $tablet) {
-        margin-top: -7.5em;
+        margin-top: toRem(-120);
         right: 0;
       }
 
